bug fixes for dark mode at alert dialog at login page

--- a/components/alert-dialog/AlertDialog.module.css
+++ b/components/alert-dialog/AlertDialog.module.css
@@ -71,3 +71,13 @@
         font-size: 0.7rem;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .title {
+        color: black;
+    }
+
+    .description {
+        color: var(--text)
+    }
+}
