--- a/components/close-button/CloseButton.module.css
+++ b/components/close-button/CloseButton.module.css
@@ -10,6 +10,10 @@
     opacity: 0.7;
 }
 
+.black {
+    color: black;
+}
+
 @media (max-width: 400px) {
     .close {
         font-size: 1.5rem;
@@ -19,5 +23,9 @@
 @media (prefers-color-scheme: dark) {
     .close {
         color: white;
+    }
+
+    .black {
+        color: black;
     }
 }
